--- a/SimpleBlog/Views/Posts/Index.cshtml
+++ b/SimpleBlog/Views/Posts/Index.cshtml
@@ -3,13 +3,10 @@
 }
 
 <h1>Posts Index</h1>
-<p><a href="@Url.RouteUrl("login")">Click here </a> to login!</p>
+<p><a href="@Url.RouteUrl("login")">Click here </a> to login!
+</p>
 @*<p>@Html.RouteLink("Click here", "login") to login!</p>*@
 
-@section Scripts
-{
-<script>alert("HI");</script>
-}
 
 
 
