Implemented form authentication and custom role provider.

--- a/SimpleBlog/Views/Shared/_Layout.cshtml
+++ b/SimpleBlog/Views/Shared/_Layout.cshtml
@@ -9,9 +9,25 @@
 	</head>
 <body>
 <header>
-	<h1><a href="@Url.RouteUrl("home")">Simple Blog</a>
-	</h1>
-	<a href="@Url.RouteUrl("login")">Login</a>
+    <h1><a href="@Url.RouteUrl("home")">Simple Blog</a>
+    </h1>
+
+@*    if  logged in, show the logout *@
+    @if (User.Identity.IsAuthenticated)
+    {
+        <p>Welcome back, @User.Identity.Name</p>
+        <a href="@Url.RouteUrl("logout")">logout</a>
+
+        if (User.IsInRole("admin"))
+        {
+            <a href="@Url.Action("index", "Posts", new {area="admin"})">View posts in admin</a>
+        }
+    }
+    else
+    {
+        <a href="@Url.RouteUrl("login")">Login</a>
+    }
+
 </header>
 
 @RenderBody()
