Imported styles and scripts(jQuery and Bootstrap)

--- a/SimpleBlog/Views/Shared/_Layout.cshtml
+++ b/SimpleBlog/Views/Shared/_Layout.cshtml
@@ -1,18 +1,25 @@
-﻿@{
+﻿@using System.Web.Optimization
+@{
 	Layout = null;
 }
 
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>@ViewBag.Title - SimpleBlog</title>
-	</head>
+
+<head>
+    <title>@ViewBag.Title - SimpleBlog</title>
+    @Styles.Render("~/styles")
+</head>
+
 <body>
+
 <header>
-    <h1><a href="@Url.RouteUrl("home")">Simple Blog</a>
+    <h1>
+        <a href="@Url.RouteUrl("home")">Simple Blog</a>
+        <i class="glyphicon-bell"></i>
     </h1>
 
-@*    if  logged in, show the logout *@
+    @*    if  logged in, show the logout *@
     @if (User.Identity.IsAuthenticated)
     {
         <p>Welcome back, @User.Identity.Name</p>
@@ -20,7 +27,7 @@
 
         if (User.IsInRole("admin"))
         {
-            <a href="@Url.Action("index", "Posts", new {area="admin"})">View posts in admin</a>
+            <a href="@Url.Action("index", "Posts", new {area = "admin"})">View posts in admin</a>
         }
     }
     else
@@ -33,10 +40,12 @@
 @RenderBody()
 
 <footer>
-	<p>&copy; @DateTime.UtcNow.Year - Jordan Taylor</p>
+    <p>&copy; @DateTime.UtcNow.Year - Jordan Taylor</p>
 </footer>
-	@RenderSection( "Scripts", false)
-	
+
+@Scripts.Render("~/scripts")
+@RenderSection("Scripts", false)
+
 </body>
 
 </html>
