--- a/SimpleBlog/Areas/Admin/Views/Users/index.cshtml
+++ b/SimpleBlog/Areas/Admin/Views/Users/index.cshtml
@@ -1,1 +1,12 @@
-﻿<h1>Users</h1>
+﻿@model SimpleBlog.Areas.Admin.ViewModels.UsersIndex
+
+
+<h1>Users</h1>
+
+<ul>
+    @foreach (var user in Model.Users)
+    {
+        <li>@user.Username</li>
+    }
+
+</ul>
