--- a/SimpleBlog/Areas/Admin/Views/Users/index.cshtml
+++ b/SimpleBlog/Areas/Admin/Views/Users/index.cshtml
@@ -1,12 +1,48 @@
 ﻿@model SimpleBlog.Areas.Admin.ViewModels.UsersIndex
 
-
 <h1>Users</h1>
 
-<ul>
+<div class="btn-toolbar">
+    <a href="@Url.Action("new")" class="btn btn-primary btn-sm"><i class="glyphicon-plus"></i> Create User</a>
+
+</div>
+
+<table class="table table-striped">
+    <thead >
+    <tr>
+        <th>Id</th>
+        <th>Username</th>
+        <th>Email</th>
+        <th>Roles</th>
+        <th>Actions</th>
+    </tr>
+    </thead>
+    <tbody>
     @foreach (var user in Model.Users)
     {
-        <li>@user.Username</li>
+        <tr>
+            <td>@user.Id</td>
+            <td>@user.Username</td>
+            <td>@user.Email</td>
+            <td>(todo)</td>
+            <td>
+                <div class="btn-group">
+                    <a href="@Url.Action("Edit", new {user.Id})" class="btn btn-xs btn-primary">
+                        <i class="glyphicon glyphicon-edit"></i>
+                        EDIT
+                    </a>
+                    <a href="#" class="btn btn-xs btn-default">
+                        <i class="glyphicon glyphicon-lock"></i>
+                        Reset Password
+                    </a>
+                    <a href="#" class="btn btn-xs btn-danger">
+                        <i class="glyphicon glyphicon-remove"></i>
+                        Delete
+                    </a>
+                </div>
+            </td>
+        </tr>
     }
+    </tbody>
+</table>
 
-</ul>
