Added Role display and editing.

--- a/SimpleBlog/Areas/Admin/Views/Users/Edit.cshtml
+++ b/SimpleBlog/Areas/Admin/Views/Users/Edit.cshtml
@@ -17,6 +17,8 @@
         @Html.TextBoxFor(f => f.Email, new {@class = "form-control", type = "email"})
     </div>
 
+    @Html.Partial("_RoleEditor", Model.Roles)
+
     <input type="submit" value="Update User" class="btn btn-primary"/>
     <a href="@Url.Action("index")">or cancel</a>
 }
