--- a/SimpleBlog/Areas/Admin/Views/Users/New.cshtml
+++ b/SimpleBlog/Areas/Admin/Views/Users/New.cshtml
@@ -22,6 +22,8 @@
         @Html.PasswordFor(f => f.Password, new {@class = "form-control"})
     </div>
 
+   @Html.Partial("_RoleEditor", Model.Roles)
+
     <input type="submit" value="Create User" class="btn btn-primary"/>
     <a href="@Url.Action("index")">or cancel</a>
 }
