--- a/SimpleBlog/Areas/Admin/Views/Posts/index.cshtml
+++ b/SimpleBlog/Areas/Admin/Views/Posts/index.cshtml
@@ -1,3 +1,94 @@
-﻿
+﻿@model SimpleBlog.Areas.Admin.ViewModels.PostsIndex
+
 <h1>Posts</h1>
 
+<div class="btn-toolbar">
+    <div class="btn-group">
+        <a href="@Url.Action("new")" class="btn btn-primary btn-sm"><i class="glyphicon glyphicon-plus"></i> Create Post</a>
+    </div>
+    <div class="btn-group pull-right">
+        @if (Model.Posts.HasPreviousPage)
+        {
+            <a href="@Url.Action("Index", new {page = Model.Posts.PreviousPage})" class="btn btn-primary btn-sm">
+                <i class="glyphicon glyphicon-chevron-left"></i> Previous Page
+            </a>
+        }
+        else
+        {
+            <a href="#" class="btn btn-default btn-disabled btn-sm">
+                <i class="glyphicon glyphicon-chevron-left"></i> Previous Page
+            </a>
+
+        }
+
+        @if (Model.Posts.HasNextPage)
+        {
+            <a href="@Url.Action("Index", new {page = Model.Posts.NextPage})" class="btn btn-primary btn-sm">
+                Next Page <i class="glyphicon glyphicon-chevron-right"></i>
+            </a>
+        }
+        else
+        {
+            <a href="#" class="btn btn-default btn-disabled btn-sm">
+                Next Page <i class="glyphicon glyphicon-chevron-right"></i>
+            </a>
+
+        }
+    </div>
+</div>
+<table class="table table-striped">
+    <thead>
+    <tr>
+        <th>Title</th>
+        <th>Author</th>
+        <th>Tags</th>
+        <th>Date</th>
+        <th>Actions</th>
+    </tr>
+    </thead>
+    <tbody>
+    @foreach (var post in Model.Posts)
+    {
+
+        var cls = "";
+        if (post.IsDeleted)
+        {
+            cls = "danger";
+        }
+        <tr class="@cls">
+            <td>@post.Title</td>
+            <td>@post.User.Username</td>
+            <td>@string.Join(", ", post.Tags.Select(t => t.Name))</td>
+            <td>@post.CreatedAt</td>
+            <td>
+                <a href="@Url.Action("edit", new {post.Id})" class="btn btn-xs btn-primary">
+                    <i class="glyphicon glyphicon-edit"></i> edit
+                </a>
+                @if (!post.IsDeleted)
+                {
+                    <div class="btn-group btn-group-xs">
+                        <a href="#" class="btn btn-danger">
+                            <i class="glyphicon glyphicon-remove"></i> Trash
+                        </a>
+                        <a href="#" class="btn btn-danger dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li >
+                                <a href="#">
+                                    <i class="glyphicon glyphicon-remove"></i> delete
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                }
+                else
+                {
+                    <a href="#" class="btn btn-xs btn-success">
+                        <i class="glyphicon glyphicon-plus-sign"></i> restore 
+                    </a>
+                }
+
+            </td>
+        </tr>
+    }
+    </tbody>
+</table>
