delete store and trash posts Slugify title

--- a/SimpleBlog/Areas/Admin/Views/Posts/Form.cshtml
+++ b/SimpleBlog/Areas/Admin/Views/Posts/Form.cshtml
@@ -6,7 +6,7 @@
 {
     if (!Model.IsNew)
     {
-        @Html.HiddenFor(f=>f.PostId)
+        @Html.HiddenFor(f => f.PostId)
     }
 
     @Html.AntiForgeryToken()
@@ -22,7 +22,7 @@
 
             <div class="form-group">
                 @Html.LabelFor(f => f.Slug)
-                @Html.TextBoxFor(f => f.Slug, new {@class = "form-control"})
+                @Html.TextBoxFor(f => f.Slug, new {@class = "form-control", data_slug = "#Title"})
             </div>
 
             <div class="form-group">
