--- a/SimpleBlog/Areas/Admin/Views/Posts/index.cshtml
+++ b/SimpleBlog/Areas/Admin/Views/Posts/index.cshtml
@@ -64,28 +64,32 @@
                 <a href="@Url.Action("edit", new {post.Id})" class="btn btn-xs btn-primary">
                     <i class="glyphicon glyphicon-edit"></i> edit
                 </a>
-                @if (!post.IsDeleted)
-                {
-                    <div class="btn-group btn-group-xs">
-                        <a href="#" class="btn btn-danger">
+
+                <div class="btn-group btn-group-xs">
+                    @if (!post.IsDeleted)
+                    {
+                        <a href="@Url.Action("trash", new {post.Id})" class="btn btn-danger" data-Post="Are you sure you want to trash this post?">
                             <i class="glyphicon glyphicon-remove"></i> Trash
                         </a>
-                        <a href="#" class="btn btn-danger dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li >
-                                <a href="#">
-                                    <i class="glyphicon glyphicon-remove"></i> delete
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                }
-                else
-                {
-                    <a href="#" class="btn btn-xs btn-success">
-                        <i class="glyphicon glyphicon-plus-sign"></i> restore 
-                    </a>
-                }
+                    }
+                    else
+                    {
+                        <a href="@Url.Action("restore", new {post.Id})" class="btn btn-xs btn-success" data-post="">
+                            <i class="glyphicon glyphicon-plus-sign"></i> restore
+                        </a>
+                    }
+                    
+                    <a href="#" class="btn @(post.IsDeleted ? "btn-success" : "btn-danger") dropdown-toggle" data-toggle="dropdown">
+                        <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li >
+                            <a href="@Url.Action("delete", new {post.Id})" data-post="Are you sure you want to delete this post FOREVER?">
+                                <i class="glyphicon glyphicon-remove"></i> delete
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            
 
             </td>
         </tr>
