Added tag editor on post form

--- a/SimpleBlog/Areas/Admin/Views/Posts/Form.cshtml
+++ b/SimpleBlog/Areas/Admin/Views/Posts/Form.cshtml
@@ -1,4 +1,5 @@
-﻿@model SimpleBlog.Areas.Admin.ViewModels.PostsForm
+﻿@using System.Web.Optimization
+@model SimpleBlog.Areas.Admin.ViewModels.PostsForm
 
 <h1>@(Model.IsNew ? "Create Post" : "Update Post" )</h1>
 
@@ -40,6 +41,50 @@
                 </div>
 
             </div>
+
+            <div class="panel panel-info">
+                <div class="panel-heading">Tags</div>
+                <div class="panel-body post-tag-editor">
+                    <label for="new-tag-name">New Tag</label>
+                    <div class="input-group">
+                        <input id="new-tag-name" type="text" class="new-tag-name form-control"/>
+                        <span class="input-group-btn">
+                            <button disabled class="btn btn-primary add-tag-button">Add</button>
+                        </span>
+                    </div>
+
+                    <ul class="tag-select">
+
+                        @*this will be hidden in css*@
+                        <li class="template">
+                            <a href="#" class="name"></a>
+
+                            <input type="hidden" class="name-input"/>
+                            <input type="hidden" class="selected-input"/>
+                        </li>
+
+
+                        @for (var i = 0; i < Model.Tags.Count; i++)
+                        {
+                            var tag = Model.Tags[i];
+
+                            <li data-tag-id="@tag.Id" class="@(tag.IsChecked ? "selected" : "")">
+                                <a href="#">@tag.Name</a>
+                                <input type="hidden" name="Tags[@(i)].Id" value="@tag.Id"/>
+                                <input type="hidden" name="Tags[@(i)].Name" value="@tag.Name"/>
+                                <input type="hidden" name="Tags[@(i)].IsChecked" value="@tag.IsChecked.ToString()" class="selected-input"/>
+
+                            </li>
+
+
+                        }
+                    </ul>
+                </div>
+            </div>
         </div>
     </div>
+}
+
+@section Scripts{
+     @Scripts.Render("~/admin/post/scripts")
 }
