fixed SELECT N +1 in posts admin
started on front end posts display

--- a/SimpleBlog/Views/Posts/Index.cshtml
+++ b/SimpleBlog/Views/Posts/Index.cshtml
@@ -1,12 +1,9 @@
-﻿@{
+﻿@model SimpleBlog.ViewModels.PostsIndex
+
+@{
 	ViewBag.Title = "Posts";
 }
 
-<h1>Posts Index</h1>
-<p><a href="@Url.RouteUrl("login")">Click here </a> to login!
-</p>
-@*<p>@Html.RouteLink("Click here", "login") to login!</p>*@
-
-
+@Html.Partial("_Posts", Model.Posts)
 
 
