Finished front end layout

--- a/SimpleBlog/Views/Posts/_Post.cshtml
+++ b/SimpleBlog/Views/Posts/_Post.cshtml
@@ -1,6 +1,6 @@
 ﻿@model SimpleBlog.Models.Post
 
-    <article>
+    <article class="post">
         <h1>
             <a href="@Url.RouteUrl("Post", new {Model.Id, Model.Slug})">@Model.Title</a>
         </h1>
@@ -16,6 +16,6 @@
                     </li>
                 }
             </ul>
-            Posted: @((int)(DateTime.UtcNow - Model.CreatedAt).TotalMinutes) mintues ago
+            Posted: <abbr class="timeago" title="@Model.CreatedAt.ToString("o")"></abbr>
         </footer>
     </article>
