--- a/SimpleBlog/Views/Posts/_Posts.cshtml
+++ b/SimpleBlog/Views/Posts/_Posts.cshtml
@@ -20,7 +20,7 @@
     @if (Model.HasNextPage)
     {
 
-        <li class="pull-left">
+        <li class="pull-right">
             <a href="@Url.Action(null, new {page = Model.NextPage})" class="btn btn-primary">
                 Older Posts
                 <i class="glyphicon glyphicon-chevron-right"></i>
